<resources>
    <string name="app_name">Star Wars - MVP</string>
    <string name="loading">Loading…</string>
    <string name="try_again">Try Again</string>
    <string name="name">Name</string>
    <string name="height_in_meters">Height (in meters)</string>
    <string name="mass_in_kg">Mass (in Kg)</string>
    <string name="created_at">Created At</string>
    <string name="character_details_not_found">Character details not found.</string>
    <string name="characters">Characters</string>
    <string name="characters_details">Character Details</string>
    <string name="failed_to_load_characters">Failed to load characters !</string>
    <string name="please_check_your_internet_connection">Please check your internet connection.</string>
</resources>