<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <include
        android:id="@+id/app_toolbar"
        layout="@layout/app_toolbar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_toolbar"
        app:layout_constraintVertical_bias="0">

        <io.prashant.starwars.ui.base.LabelTextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/character_details_text_margin"
            app:title="@string/name"
            app:value="" />

        <io.prashant.starwars.ui.base.LabelTextView
            android:id="@+id/tv_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/character_details_text_margin"
            app:title="@string/height_in_meters"
            app:value="" />

        <io.prashant.starwars.ui.base.LabelTextView
            android:id="@+id/tv_mass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/character_details_text_margin"
            app:title="@string/mass_in_kg"
            app:value="" />

        <io.prashant.starwars.ui.base.LabelTextView
            android:id="@+id/tv_creation_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/character_details_text_margin"
            app:title="@string/created_at"
            app:value="" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>
